isal test, do not merge

--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -904,6 +904,9 @@ insteon-frontend-home-assistant==0.4.0
 # homeassistant.components.intellifire
 intellifire4py==2.2.2
 
+# homeassistant.components.http
+isal==1.5.3
+
 # homeassistant.components.gogogate2
 ismartgate==5.0.1
 
