--- a/homeassistant/components/http/manifest.json
+++ b/homeassistant/components/http/manifest.json
@@ -9,6 +9,7 @@
   "requirements": [
     "aiohttp_cors==0.7.0",
     "aiohttp-fast-url-dispatcher==0.3.0",
-    "aiohttp-zlib-ng==0.3.1"
+    "aiohttp-zlib-ng==0.3.1",
+    "isal==1.5.3"
   ]
 }
