--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1132,6 +1132,9 @@ intellifire4py==2.2.2
 # homeassistant.components.iperf3
 iperf3==0.1.11
 
+# homeassistant.components.http
+isal==1.5.3
+
 # homeassistant.components.gogogate2
 ismartgate==5.0.1
 
